--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -15,7 +15,7 @@ nav > .button-container {
 }
 
 .nav-h1 > a {
-    color: #BF616A;
+    color: #DCA7AD;
     font-size: 25px;
     font-family: 'Inter', sans-serif;
     text-decoration: none;
@@ -33,7 +33,7 @@ nav > .button-container > button > a, nav > .button-container > button {
 nav > p {
     max-width: 450px;
     min-width: 100px;
-    color: #5e81ac;
+    color: #8DA5C4;
     font-size: 18px;
     margin-right: 20px;
 }
